--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 <a class="text-decoration-none text-inherit card-link" href="shop/shop-grid">
                                     <div class="card-product mb-lg-4 card">
                                         <div class="text-center py-4 card-body">
-                                            <img src="../images/Category/fruits-vegetables.jpg" alt="Fruits & Vegetables" class="mb-3 img-fluid">
+                                            <img src="./images/Category/fruits-vegetables.jpg" alt="Fruits & Vegetables" class="mb-3 img-fluid">
                                             <div class="text-truncate">Fruits & Vegetables</div>
                                         </div>
                                     </div>
