--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                 </div>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Offers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#shop">Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#offers">Offers</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Categories</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contact Us</a></li>
@@ -64,7 +64,7 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active position-relative">
-                                <img src="./images/grocery1.jpg" class="d-block w-100" alt="...">
+                                <img src="./images/grocery1.jpg" class="d-block w-100 img-fluid height: auto;">
                                 <div class="carousel-caption text-start position-absolute top-50 start-0 translate-middle-y ps-4">
                                     
                                     <h1 class="display-4 fw-bold text-black mb-3">
@@ -73,7 +73,7 @@
                                     <p class="lead text-black mb-4">
                                         Introduced a new model for online grocery shopping <br> and convenient home delivery.
                                     </p>
-                                    <a href="#" class="btn btn-dark btn-lg d-inline-flex align-items-center gap-2">
+                                    <a href="#shop" class="btn btn-dark btn-lg d-inline-flex align-items-center gap-2">
                                         Shop Now
                                         <i class="fas fa-arrow-right"></i>
                                     </a>
@@ -302,7 +302,7 @@
     </section>
 
 
-    <section class="m-4">
+    <section class="m-4" id="offers">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-12 mb-3">
@@ -329,7 +329,7 @@
 
 
 
-    <section class="py-5 bg-light">
+    <section class="py-5 bg-light" id="shop">
         <div class="container">
             <h2 class="text-center mb-4">Popular Products</h2>
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3">
